--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "chartjs": "^0.3.24",
     "next": "14.2.7",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
